--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <titleUFO</title>
 </head>
 <body>
 
     <main>
-        <div>
-            <div><h1>404</h1>
+        <div class="left">
+            <h1>404</h1>
             <p>Page not found</p>
             <a href="#">Go home</a>
         </div>
+
+        <div>
+            <img src="./img/ufo.jpg.jpg" alt="UFO">
         </div>
-        <div><img src=//unsplash.it/500/300" alt="UFO"></div>
     </main>
+
 </body>
 </html>
