my rendition of this picture. Behold

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="script.js" defer></script>
     <titleUFO</title>
 </head>
 <body>
@@ -12,10 +13,10 @@
         <div class="left">
             <h1>404</h1>
             <p>Page not found</p>
-            <a href="#">Go home</a>
+            <button id="goHomeButton">Go home</button>
         </div>
 
-        <div>
+        <div class="right">
             <img src="./img/ufo.jpg.jpg" alt="UFO">
         </div>
     </main>
