--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <script src="script.js" defer></script>
-    <titleUFO</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link id="style-link" rel="stylesheet" href="./styles/style.css" />
+		<script src="script.js" defer></script>
+		<title>UFO</title>
+	</head>
+	<body>
+		<!-- <button class="lil" id="theme-toggle">Dark Theme</button> -->
+		<main>
+			<div class="left">
+				<h1>404</h1>
+				<p>Page not found</p>
+				<button id="goHomeButton">Go home</button>
+			</div>
 
-    <main>
-        <div class="left">
-            <h1>404</h1>
-            <p>Page not found</p>
-            <button id="goHomeButton">Go home</button>
-        </div>
-
-        <div class="right">
-            <img src="./img/ufo.jpg.jpg" alt="UFO">
-        </div>
-    </main>
-
-</body>
+			<div class="right">
+				<img src="./img/ufo.jpg.jpg" alt="UFO" />
+			</div>
+		</main>
+	</body>
 </html>
